fix: 트랜잭션 수정, 테스트 예외 처리 수정